apps/demo-app/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
