apps/demo-app/v1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tetris-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tetris-service
            port:
              number: 80
